# Metody_systemowe_i_decyzyjne

./: README.md  pyproject.toml
lab1/: Customer_analisys.py  Raport_L1_Dominik_Dudek.html  Raport_L1_Dominik_Dudek.ipynb  constants.py  zadania.ipynb
