[project]
name = "metody-systemowe-i-decyzyjne"
version = "0.1.0"
description = "Projekt do analizy danych i prostych systemow decyzyjnych opartych na regulach."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[project.scripts]
msd = "app.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[tool.ruff]
preview = true
line-length = 120

[tool.ruff.lint]
select = [
    "E",      
    "F",     
    "I",      
    "B",      
    "UP",    
    "N",      
    "C4",     
    "RUF",    
]
